Progress on Notices, Reports and System Access

--- a/src/app/components/home/home.component.html
+++ b/src/app/components/home/home.component.html
@@ -1,5 +1,5 @@
 <app-header></app-header>
-<app-navbar></app-navbar>
+<app-navbar [selectedPage]="'home'"></app-navbar>
 
 <app-signoff-section></app-signoff-section>
 <div class="content">
