--- a/src/app/components/home/shared/navbar/navbar.component.html
+++ b/src/app/components/home/shared/navbar/navbar.component.html
@@ -1,6 +1,35 @@
 <nav class="navbar">
-    <button mat-button routerLink="/home">Home</button>
-    <button mat-button routerLink="/reports">Reports</button>
-    <button mat-button routerLink="/notices">Notices</button>
-    <button mat-button routerLink="/system-access">System Access</button>
-</nav>
+    <button
+      mat-button
+      routerLink="/home"
+      [ngClass]="{ active: selectedPage === 'home' }"
+      (click)="setActivePage('home')"
+    >
+      Home
+    </button>
+    <button
+      mat-button
+      routerLink="/reports"
+      [ngClass]="{ active: selectedPage === 'reports' }"
+      (click)="setActivePage('reports')"
+    >
+      Reports
+    </button>
+    <button
+      mat-button
+      routerLink="/notices"
+      [ngClass]="{ active: selectedPage === 'notices' }"
+      (click)="setActivePage('notices')"
+    >
+      Notices
+    </button>
+    <button
+      mat-button
+      routerLink="/system-access"
+      [ngClass]="{ active: selectedPage === 'system-access' }"
+      (click)="setActivePage('system-access')"
+    >
+      System Access
+    </button>
+  </nav>
+  
