--- a/src/app/components/system-access/access-modal/access-modal.component.html
+++ b/src/app/components/system-access/access-modal/access-modal.component.html
@@ -1,120 +1,99 @@
 <div class="modal" *ngIf="isOpen">
   <div class="modal-content">
-    <h3>Request Access</h3>
-    <label for="accessType">Select Access Type:</label>
-    <mat-form-field class="form-input">
-      <mat-select
-        id="accessType"
-        [(ngModel)]="selectedAccessType"
-        (change)="onAccessTypeChange($event)"
-      >
-        <mat-option value="documentAdmin">Document Admin</mat-option>
-        <mat-option value="approvedIndividual">Approved Individual</mat-option>
-      </mat-select>
-    </mat-form-field>
-    <div id="form-container">
-      <ng-container [ngSwitch]="selectedAccessType">
-        <!-- Document Admin Form -->
-        <div *ngSwitchCase="'documentAdmin'">
-          <label for="name">Name of the Individual:</label>
-          <input
-            type="text"
-            id="name"
-            [(ngModel)]="documentAdminForm.name"
-            class="form-input"
-          />
-          <label for="jobTitle">Job Title:</label>
-          <input
-            type="text"
-            id="jobTitle"
-            [(ngModel)]="documentAdminForm.jobTitle"
-            class="form-input"
-          />
-          <div class="personal_info">
-            <div class="left">
-              <label for="dob">Date of Birth:</label>
-              <input
-                type="date"
-                id="dob"
-                [(ngModel)]="documentAdminForm.dob"
-                class="form-input"
-              />
-            </div>
-            <div class="right right_nat">
-              <label for="nationality">Nationality:</label>
-              <mat-form-field class="form-input">
-                <mat-select
-                  id="nationality"
-                  [(ngModel)]="documentAdminForm.nationality"
-                >
-                  <mat-option value="US">United States</mat-option>
-                  <mat-option value="IN">India</mat-option>
-                </mat-select>
-              </mat-form-field>
-            </div>
-          </div>
-          <div class="personal_info">
-            <div class="left">
-              <label for="email">Email Address:</label>
-              <input
-                type="email"
-                id="email"
-                [(ngModel)]="documentAdminForm.email"
-                class="form-input"
-              />
-            </div>
-            <div class="right right_mail">
-              <label for="confirmEmail">Confirm Email Address:</label>
-              <input
-                type="email"
-                id="confirmEmail"
-                [(ngModel)]="documentAdminForm.confirmEmail"
-                class="form-input"
-              />
-            </div>
-          </div>
-        </div>
-
-        <!-- Approved Individual Form -->
-        <div *ngSwitchCase="'approvedIndividual'">
-          <label for="approvedName">Approved Individual Name:</label>
-          <input
-            type="text"
-            id="approvedName"
-            [(ngModel)]="approvedIndividualForm.name"
-            class="form-input"
-          />
-          <label for="controlledFunctions"
-            >Approved Controlled Functions:</label
-          >
-          <mat-form-field style="width: 600px; height: 40px">
-            <mat-select
-              id="controlledFunctions"
-              [(ngModel)]="approvedIndividualForm.controlledFunctions"
-              class="form-select"
-            >
-              <mat-option value="Function1">Function 1</mat-option>
-              <mat-option value="Function2">Function 2</mat-option>
-            </mat-select>
-          </mat-form-field>
-        </div>
-
-        <!-- Default Case -->
-        <div *ngSwitchDefault>
-          <p>Please select a valid access type to proceed.</p>
-        </div>
-      </ng-container>
+    <!-- Header -->
+    <div class="modal-header">
+      <h3>Request Access</h3>
     </div>
 
-    <!-- Modal Actions -->
+    <!-- Body -->
+    <div class="modal-body">
+      <mat-form-field appearance="outline" class="form-input full-width">
+        <mat-label>Select Access Type</mat-label>
+        <mat-select [(ngModel)]="selectedAccessType" (change)="onAccessTypeChange($event)">
+          <mat-option value="documentAdmin">Document Admin</mat-option>
+          <mat-option value="approvedIndividual">Approved Individual</mat-option>
+        </mat-select>
+      </mat-form-field>
+
+      <div class="form-grid">
+        <!-- Document Admin Form -->
+        <ng-container *ngIf="selectedAccessType === 'documentAdmin'">
+          <div class="form-item">
+            <mat-form-field appearance="outline" class="form-input">
+              <mat-label>Name of the Individual</mat-label>
+              <input matInput type="text" [(ngModel)]="documentAdminForm.name" />
+            </mat-form-field>
+          </div>
+
+          <div class="form-item">
+            <mat-form-field appearance="outline" class="form-input">
+              <mat-label>Job Title</mat-label>
+              <input matInput type="text" [(ngModel)]="documentAdminForm.jobTitle" />
+            </mat-form-field>
+          </div>
+
+          <div class="form-item">
+            <mat-form-field appearance="outline" class="form-input">
+              <mat-label>Date of Birth</mat-label>
+              <input matInput type="date" [(ngModel)]="documentAdminForm.dob" />
+            </mat-form-field>
+          </div>
+
+          <div class="form-item">
+            <mat-form-field appearance="outline" class="form-input">
+              <mat-label>Nationality</mat-label>
+              <mat-select [(ngModel)]="documentAdminForm.nationality">
+                <mat-option value="US">United States</mat-option>
+                <mat-option value="IN">India</mat-option>
+              </mat-select>
+            </mat-form-field>
+          </div>
+
+          <div class="form-item">
+            <mat-form-field appearance="outline" class="form-input">
+              <mat-label>Email Address</mat-label>
+              <input matInput type="email" [(ngModel)]="documentAdminForm.email" />
+            </mat-form-field>
+          </div>
+
+          <div class="form-item">
+            <mat-form-field appearance="outline" class="form-input">
+              <mat-label>Confirm Email Address</mat-label>
+              <input matInput type="email" [(ngModel)]="documentAdminForm.confirmEmail" />
+            </mat-form-field>
+          </div>
+        </ng-container>
+
+        <!-- Approved Individual Form -->
+        <ng-container *ngIf="selectedAccessType === 'approvedIndividual'">
+          <div class="form-item full-width">
+            <mat-form-field appearance="outline" class="form-input">
+              <mat-label>Approved Individual Name</mat-label>
+              <input matInput type="text" [(ngModel)]="approvedIndividualForm.name" />
+            </mat-form-field>
+          </div>
+
+          <div class="form-item full-width">
+            <mat-form-field appearance="outline" class="form-input">
+              <mat-label>Approved Controlled Functions</mat-label>
+              <mat-select [(ngModel)]="approvedIndividualForm.controlledFunctions">
+                <mat-option value="Function1">Function 1</mat-option>
+                <mat-option value="Function2">Function 2</mat-option>
+              </mat-select>
+            </mat-form-field>
+          </div>
+        </ng-container>
+      </div>
+    </div>
+
+    <!-- Actions -->
     <div class="modal-actions">
-      <button class="btn-close" (click)="closeModal()">Close</button>
+      <button mat-raised-button class="btn-cancel" (click)="closeModal()">Close</button>
       <button
-      class="btn-request"
-      [class.disabled]="!isFormValid()"
-      [disabled]="!isFormValid()"
-      *ngIf="selectedAccessType === 'documentAdmin' || selectedAccessType === 'approvedIndividual'"
-      (click)="onRequest()"
+        mat-raised-button
+        class="btn-request"
+        [disabled]="!isFormValid()"
+        (click)="onRequest()"
       >
         Request
       </button>
