--- a/src/styles.scss
+++ b/src/styles.scss
@@ -1,12 +1,12 @@
 @use "@angular/material" as mat;
 
-.mdc-text-field__input{
-  padding-top: 10px !important; 
-}
+// .mdc-text-field__input{
+//   padding-top: 10px !important; 
+// }
 
-.mat-mdc-select{
-  padding-top: 10px !important; 
-}
+// .mat-mdc-select{
+//   padding-top: 10px !important; 
+// }
 
 body {
   margin: 0;
@@ -41,9 +41,10 @@ mat-card-header {
 
   color: #fff;
 }
-.mat-mdc-form-field-infix {
-  padding: 0 !important;
-}
+
+// .mat-mdc-form-field-infix {
+//   padding: 0 !important;
+// }
 
 .mat-mdc-form-field-bottom-align::before {
   display: none !important;
@@ -321,14 +322,14 @@ button.toast-close-button {
   opacity: 0.4;
 }
 
-button {
-  padding: 0.5rem 1rem;
-  border: none;
-  border-radius: 4px;
-  font-size: 1rem;
-  cursor: pointer;
-  transition: background-color 0.3s ease;
-}
+// button {
+//   padding: 0.5rem 1rem;
+//   border: none;
+//   border-radius: 4px;
+//   font-size: 1rem;
+//   cursor: pointer;
+//   transition: background-color 0.3s ease;
+// }
 
 .btn-close {
   background-color: #ccc;
@@ -389,4 +390,47 @@ button.disabled {
 
 .toast-error {
   background-color: #a51e36 !important;
+}
+
+.mat-tab-group .mat-tab-label {
+  color: #555555 !important;
+  font-weight: bold !important;
+}
+
+.mat-tab-group .mat-tab-label-active {
+  color: white !important;
+  background-color: #a51e36 !important;
+}
+
+.mat-tab-group .mat-ink-bar {
+  background-color: #a51e36 !important;
+}
+
+.btn-icon {
+  background: transparent;
+  border: none;
+  cursor: pointer;
+  display: inline-flex;
+  align-items: center;
+  justify-content: center;
+  padding: 6px;
+  border-radius: 50%;
+  transition: background-color 0.3s ease;
+
+  &:hover {
+    background-color: rgba(165, 30, 54, 0.1); /* Light maroon background */
+  }
+
+  .material-icons {
+    font-size: 24px;
+    line-height: 1;
+  }
+}
+
+.btn-revoke .material-icons {
+  color: #a51e36; /* Maroon color for revoke */
+}
+
+.btn-info .material-icons {
+  color: #555555; /* Gray color for information */
 }
